[package]
edition = "2021"
readme = "README.md"
name = "stm32h730xx_is25lp128"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.7.0"
rtt-target = "0.5.0"
panic-probe = "0.3"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h735", "rt", "xspi"] }

cortex-m = "0.7.6"

flash-algorithm = { version = "0.4.0", default-features = false, features = [
    "erase-chip",
    "verify",
] }

# this lets you use `cargo fix`!
[[bin]]
name = "stm32h730xx_is25lp128"
# path = "src/lib.rs"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
