[workspace]

[package]
name = "stm32h750xx_mt25_ql512_dfm"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[[bin]]
name = "stm32h750xx_mt25_ql512_dfm"
path = "src/main.rs"
test = false
bench = false

[dependencies]
flash-algorithm = { version = "0.7.0", features = ["erase-chip"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
